[project]
name = "callmemaybe"
version = "0.1.0"
description = "hey i jus met uuu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
